--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-
-API_KEY = "AIzaSyBNDW8t0FqiyI_R14e6EKyCKTw67qY2DJY"
+GROQ_API_KEY = "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"
 KeyMaster = "AIzaSyBNDW8t0FqiyI_R14e6EKyCKTw67qY2DJY"
-token_video = "c2Vydmlkb3Jmb3JleEBnbWFpbC5jb20:HWkojUOp0cG85IIVt5PDy"
